--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,23 @@
-# Compiled class file
-*.class
+# Maven target directory
+**/target/
 
-# Log file
-*.log
+# vscode folder
+**/.vscode/
 
-# BlueJ files
-*.ctxt
+# Eclipse specific files
+.classpath
+.project
+.settings/
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# IntelliJ specific files
+.idea/
+*.iml
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
+# OS specific files
+.DS_Store
+Thumbs.db
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
+
+#Secrets
+**/.env
+backend1/climate-and-pollution/session-settings.json
