--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,35 @@ Thumbs.db
 #Secrets
 **/.env
 backend1/climate-and-pollution/session-settings.json
+
+# Maven cache
+backend1/climate-and-pollution/.mvn/
+
+# Personal settings
+session-settings.json
+
+# Node.js dependencies
+node_modules/
+
+# Temporary files
+*.log
+
+# Compiled class file
+*.class
+# Log file
+*.log
+# BlueJ files
+*.ctxt
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+# Package Files #
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+replay_pid*
